test/link/section-union/align-ofs-conflict.out
error: Section "conflicting alignment" is defined with 8-byte alignment (offset 7) at section-union/align-ofs-conflict.asm(7), but with 16-byte alignment (offset 14) at section-union/align-ofs-conflict.asm(7)
---
error: <stdin>(18):
    Section already declared with incompatible 8-byte alignment (offset 7)
FATAL: <stdin>(18):
    Cannot create section "conflicting alignment" (1 error)
